--- a/links/sandy/css/style.css
+++ b/links/sandy/css/style.css
@@ -432,7 +432,7 @@ footer {
 	clear: both;
 	opacity: 0.7;
 	text-align: center;
-	font-weight: bold;
+	/*font-weight: bold;*/
 	margin-left:200px;
 	margin-top:1175px;
 
