--- a/links/sandy/css/style.css
+++ b/links/sandy/css/style.css
@@ -8,6 +8,9 @@ body{
 	margin: 0 auto 0 auto;
 }
 
+.navbar > .container .navbar-brand, .navbar > .container-fluid .navbar-brand {
+    margin-left: 5%;
+}
 .container{
 	margin-left:75px;
 }
@@ -18,7 +21,7 @@ body{
 }
 .navbar-nav{
 	/*position:absolute;*/
-	margin-left: 150px;
+	margin-left: calc(5% + 150px);
 	font-family: Electrolize;
 }
 #tweetsContainer a{
@@ -36,6 +39,7 @@ body{
 #wrap-body{
 	position: absolute;
 	top:55px;
+	margin-left:5%;
 }
 h2 {
 	color:#F6CE1D;
@@ -161,10 +165,10 @@ ul{
 	opacity: 0.5;
 }
 #tweetsContainer{
-	position: fixed; 
+	position: absolute; 
 	width: 220px;
 	left: 10px;
-	top:152px;
+	top:94px;
 	background-color: black; 
 	border-radius: 10px;
 	opacity: 0.5;
@@ -344,7 +348,7 @@ position:relative;
 	display: none;
 	position:fixed;
 		/*right: 320px;*/
-		left: 1135px;
+		left: calc(5% + 1135px);
 		bottom: 10px;
 	height:100px;
 	width:240px;
