--- a/links/sandy/css/style.css
+++ b/links/sandy/css/style.css
@@ -3,7 +3,7 @@ body{
 	color: white;
 	text-align: center;
 
-	font-family: Verdana, sans;
+	font-family: Akashi, Verdana, sans;
 	width: 100%;
 	margin: 0 auto 0 auto;
 }
